# programming_Language_Detector

./: .gitignore  CMakeLists.txt  README.md
app/: FastDetectGUI
include/: Detector.h  GeneratedLanguages.h
resources/: heuristics.yml
scripts/: extract_linguist_data.py  test_against_samples.py
src/: Detector.cpp  GeneratedLanguages.cpp  main.cpp
tests/data/Apex/: TwilioAPI.cls
